2010-06-17	Ralf Corsépius <ralf.corsepius@rtems.org>

	* libfs/src/rfs/rtems-rfs-group.c: Various 64bit fixes.

2010-06-16	Joel Sherrill <joel.sherrilL@OARcorp.com>

	PR 1453/cpukit
	* posix/Makefile.am: newlib uses sysconf() for _CLOCKS_PER_SEC_ so
	enable it even when POSIX threads are disabled.

2010-06-16	Ralf Corsépius <ralf.corsepius@rtems.org>

	* libfs/src/rfs/rtems-rfs-file.c: Various 64bit fixes.
	* libfs/src/rfs/rtems-rfs-inode.c: Various 64bit fixes.
	* libfs/src/rfs/rtems-rfs-rtems.c: Various 64bit fixes.
	Add PRIomode_t.
	* libfs/src/rfs/rtems-rfs-buffer-bdbuf.c:
	Various 64bit fixes.

2010-06-16	Ralf Corsépius <ralf.corsepius@rtems.org>

	PR 1556/cpukit
	* libfs/src/rfs/rtems-rfs-bitmaps.h,
	libfs/src/rfs/rtems-rfs-block-pos.h,
	libfs/src/rfs/rtems-rfs-buffer.h,
	libfs/src/rfs/rtems-rfs-file-system-fwd.h,
	libfs/src/rfs/rtems-rfs-file-system.h,
	libfs/src/rfs/rtems-rfs-file.h,
	libfs/src/rfs/rtems-rfs-format.h,
	libfs/src/rfs/rtems-rfs-group.h,
	libfs/src/rfs/rtems-rfs-inode.h:
	Rename "struct rtems_rfs_*_t" into "struct _rtems_rfs_*".
	* libfs/src/rfs/rtems-rfs-shell.c: Remove rtems_rfs_shell_cmd_t.

2010-06-15	Ralf Corsépius <ralf.corsepius@rtems.org>

	PR 1566/filesystem
	* libnetworking/rtems/mkrootfs.c,  libnetworking/rtems/mkrootfs.h:
	Let rtems_rootfs_append_host_rec take an in_addr_t as first arg.
	* libnetworking/rtems/rtems_dhcp.c, libnetworking/nfs/bootp_subr.c:
	Reflect changes above.

2010-06-15	Ralf Corsépius <ralf.corsepius@rtems.org>

	* libfs/src/rfs/rtems-rfs-dir.c: Various 64bit compatibility fixes.
	Add PRIdoff_t.
	Remove stray "\"s.
	* libfs/src/rfs/rtems-rfs-link.c: Various 64bit compatibility fixes.

2010-06-15	Ralf Corsépius <ralf.corsepius@rtems.org>

	* libfs/src/rfs/rtems-rfs-file-system.h: Remove bogus typecast.
	* libfs/src/rfs/rtems-rfs-block.c, libfs/src/rfs/rtems-rfs-buffer.c,
	libnetworking/nfs/bootp_subr.c: Misc. 64bit-compatibility fixes.
	* posix/include/rtems/posix/pthread.h: Remove stray comment.